# ncofdm

./: README.md
gr-ncofdm/: CMakeLists.txt  CMakeLists.txt~  MANIFEST.md
gr-ncofdm/cmake/Modules/: ncofdmConfig.cmake
gr-ncofdm/docs/: README.ncofdm
gr-ncofdm/docs/doxygen/: Doxyfile.in
gr-ncofdm/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-ncofdm/examples/: README  config_ncofdm_rx  config_ncofdm_tx  const_tx_general.py  ncofdm_loopback.grc  ncofdm_loopback.py  ncofdm_rx.grc  ncofdm_rx.py  ncofdm_tx.grc  ncofdm_tx.py  rx_general.py  spectrum_analyzer.grc  spectrum_and_gain_analyzer.py  tx_general.py
gr-ncofdm/grc/: CMakeLists.txt  CMakeLists.txt~  ncofdm_DyThresAdjust.xml  ncofdm_FreqOffCalc.xml  ncofdm_LongPNcorr.xml  ncofdm_LongPNcorrV2.xml  ncofdm_ShortPNcorr.xml  ncofdm_ShortPNdetector.xml  ncofdm_add_cp_sync.xml  ncofdm_add_cp_underlay.xml  ncofdm_ncofdm_carrier_allocator.xml  ncofdm_stream2fftvector.xml  ncofdm_stream_to_fftstream.xml  ncofdm_underlay_sync_cp.xml~  ncofdm_underlay_sync_detector.xml  ncofdm_underlay_sync_detector.xml~
gr-ncofdm/include/ncofdm/: CMakeLists.txt  DyThresAdjust.h  FreqOffCalc.h  LongPNcorr.h  LongPNcorrV2.h  ShortPNcorr.h  ShortPNdetector.h  add_cp_sync.h  add_cp_underlay.h  api.h  ncofdm_carrier_allocator.h  stream2fftvector.h  stream_to_fftstream.h  underlay_sync_cp.h  underlay_sync_cp.h~  underlay_sync_detector.h
gr-ncofdm/lib/: CMakeLists.txt  CMakeLists.txt~  DyThresAdjust_impl.cc  DyThresAdjust_impl.h  FreqOffCalc_impl.cc  FreqOffCalc_impl.cc~  FreqOffCalc_impl.h  LongPNcorrV2_impl.cc  LongPNcorrV2_impl.h  LongPNcorr_impl.cc  LongPNcorr_impl.h  LongPNcorr_impl_bu.cc  ShortPNcorr_impl.cc  ShortPNcorr_impl.h  ShortPNdetector_impl.cc  ShortPNdetector_impl.h  add_cp_sync_impl.cc  add_cp_sync_impl.h  add_cp_underlay_impl.cc  add_cp_underlay_impl.h  ncofdm_carrier_allocator_impl.cc  ncofdm_carrier_allocator_impl.h  qa_ncofdm.cc  qa_ncofdm.h  stream2fftvector_impl.cc  stream2fftvector_impl.h  stream_to_fftstream_impl.cc  stream_to_fftstream_impl.h  test_ncofdm.cc  underlay_sync_cp_impl.cc  underlay_sync_cp_impl.cc~  underlay_sync_cp_impl.h  underlay_sync_cp_impl.h~  underlay_sync_detector_impl.cc  underlay_sync_detector_impl.h
gr-ncofdm/python/: CMakeLists.txt  __init__.py  qa_ncofdm_carrier_allocator.py  qa_stream2fftvector.py
gr-ncofdm/swig/: CMakeLists.txt  ncofdm_swig.i
